add: test service's