@@ -3,13 +3,37 @@ plugins {
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
     id "org.sonarqube" version "4.4.1.3373"
+    id "jacoco"
 }
 
-group = 'org.example'
+jacocoTestReport {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+test {
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+}
+sonar {
+    properties {
+        property "sonar.projectKey", "MishaPatsiupin_NumBeer"
+        property "sonar.organization", "bears"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
@@ -24,8 +48,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-
     implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
 
     compileOnly 'org.projectlombok:lombok'
@@ -35,14 +57,8 @@ dependencies {
 
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-}
 
-sonar {
-    properties {
-        property "sonar.projectKey", "MishaPatsiupin_NumBeer"
-        property "sonar.organization", "bears"
-        property "sonar.host.url", "https://sonarcloud.io"
-    }
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
 }
 
 tasks.named('test') {
